--- a/zhi/index.html
+++ b/zhi/index.html
@@ -1,28 +1,6 @@
-<!doctype html>
-<html lang="">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="./favicon.ico">
-    <title>什么值得买</title>
-    <script defer="defer" src="./js/chunk-vendors.ae44092f.js"></script>
-    <script defer="defer" src="./js/app.49108d78.js"></script>
-    <link href="./css/app.fb5cdd4c.css" rel="stylesheet">
-</head>
-
-<body>
-    <noscript><strong>We're sorry but template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
-    <div id="app"></div>
-    <script>
-        let doc = document.documentElement
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>什么值得买</title><script defer="defer" src="/js/chunk-vendors.ae44092f.js"></script><script defer="defer" src="/js/app.49108d78.js"></script><link href="/css/app.fb5cdd4c.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script>let doc = document.documentElement
         let width = doc.clientWidth
         let ratio = width / 375
         let fontSize = 10 * ratio
         if (fontSize > 20) fontSize = 20
-        doc.style.fontSize = fontSize + 'px'
-    </script>
-</body>
-
-</html>
+        doc.style.fontSize = fontSize + 'px'</script></body></html>
