--- a/week-05/index.html
+++ b/week-05/index.html
@@ -1,1 +1,33 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><!--[if IE]><link rel="icon" href="/favicon.ico"><![endif]--><title>week-05</title><script defer="defer" type="module" src="/js/chunk-vendors.4d2bea99.js"></script><script defer="defer" type="module" src="/js/app.0eebd19a.js"></script><link href="/css/app.4424bb94.css" rel="stylesheet"><link rel="icon" type="image/svg+xml" href="/img/icons/favicon.svg"><link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"><link rel="manifest" href="/manifest.json"><meta name="theme-color" content="#4DBA87"><meta name="apple-mobile-web-app-capable" content="no"><meta name="apple-mobile-web-app-status-bar-style" content="default"><meta name="apple-mobile-web-app-title" content="week-05"><link rel="apple-touch-icon" href="/img/icons/apple-touch-icon-152x152.png"><link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#4DBA87"><meta name="msapplication-TileImage" content="/img/icons/msapplication-icon-144x144.png"><meta name="msapplication-TileColor" content="#000000"><script defer="defer" src="/js/chunk-vendors-legacy.471c8795.js" nomodule></script><script defer="defer" src="/js/app-legacy.3b945690.js" nomodule></script></head><body><div id="app"></div></body></html>
+<!doctype html>
+<html lang="">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!--[if IE]><link rel="icon" href="/favicon.ico"><![endif]-->
+    <title>week-05</title>
+    <script defer="defer" type="module" src="./js/chunk-vendors.4d2bea99.js"></script>
+    <script defer="defer" type="module" src="./js/app.0eebd19a.js"></script>
+    <link href="./css/app.4424bb94.css" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="./img/icons/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/icons/favicon-16x16.png">
+    <link rel="manifest" href="./manifest.json">
+    <meta name="theme-color" content="#4DBA87">
+    <meta name="apple-mobile-web-app-capable" content="no">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="week-05">
+    <link rel="apple-touch-icon" href="./img/icons/apple-touch-icon-152x152.png">
+    <link rel="mask-icon" href="./img/icons/safari-pinned-tab.svg" color="#4DBA87">
+    <meta name="msapplication-TileImage" content="./img/icons/msapplication-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#000000">
+    <script defer="defer" src="./js/chunk-vendors-legacy.471c8795.js" nomodule></script>
+    <script defer="defer" src="./js/app-legacy.3b945690.js" nomodule></script>
+</head>
+
+<body>
+    <div id="app"></div>
+</body>
+
+</html>
