--- a/week-05/index.html
+++ b/week-05/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <!--[if IE]><link rel="icon" href="/favicon.ico"><![endif]-->
+    <!--[if IE]><link rel="icon" href="./favicon.ico"><![endif]-->
     <title>week-05</title>
     <script defer="defer" type="module" src="./js/chunk-vendors.4d2bea99.js"></script>
     <script defer="defer" type="module" src="./js/app.0eebd19a.js"></script>
