--- a/week-07/index.html
+++ b/week-07/index.html
@@ -12,9 +12,7 @@
     <link href="./css/app.fb5cdd4c.css" rel="stylesheet">
 </head>
 
-<body>
-    <noscript><strong>We're sorry but template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-        </noscript>
+<body><noscript><strong>We're sorry but template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
     <div id="app"></div>
     <script>
         let doc = document.documentElement
