--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                     <div class="blog-item"><a href="https://mrgong1997.github.io/resume">Resume</a></div>
                     <div class="blog-item"><a href="https://mrgong1997.github.io/Q-A/">Q & A</a></div>
                     <div class="blog-item"><a href="https://mrgong1997.github.io/LeetCode/">LeetCode</a></div>
-                    <div class="blog-item"><a href="./week-07/index.html">什么值得买</a></div>
+                    <div class="blog-item"><a href="https://mrgong1997.github.io/week-05/">week-05</a></div>
+                    <div class="blog-item"><a href="https://mrgong1997.github.io/week-07/">week-07</a></div>
                     <div class="blog-item"><a href="http://mrgong.tech/qqmusic/">QQ音乐</a></div>
                     <div class="blog-item"><a href="http://mrgong.tech/qqmusic2.0/">QQ音乐2.0</a></div>
                     <div class="blog-item"><a href="http://mrgong.tech/dribbble/">Dribbble</a></div>
