--- a/resume/index.html
+++ b/resume/index.html
@@ -30,11 +30,11 @@
                     </li>
                     <li>
                         <span class="material-icons">博客：</span>
-                        <a href=""><span class="text ">https://mrgong1997.github.io/</span></a>
+                        <a href=""><span class="text ">mrgong1997.github.io</span></a>
                     </li>
                     <li>
                         <span class="material-icons">github：</span>
-                        <a href=""><span class="text ">https://github.com/mrgong1997</span></a>
+                        <a href=""><span class="text ">github.com/mrgong1997</span></a>
                     </li>
                     <li>
                         <span class="material-icons ">地址：</span>
