--- a/LeetCode/index.html
+++ b/LeetCode/index.html
@@ -17,7 +17,7 @@
         window.$docsify = {
             name: '<h1>LeetCode</h1>',
             logo: 'imgs/icon.png',
-            repo: 'https://github.com/docsifyjs/docsify/',
+            repo: 'https://github.com/mrgong1997',
             loadSidebar: true,
             loadNavbar: true,
             subMaxLevel: 3,
