--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <h3>These are currently accessible sites:</h3>
                 <div class="blog-group">
                     <div class="blog-item"><a href="http://118.31.74.58:4080">Feed App</a></div>
-                    <div class="blog-item"><a href="http://118.31.74.58:4003">ToDo-online</a></div>
-                    <div class="blog-item"><a href="http://118.31.74.58:4001">ToDo-local</a></div>
+                    <div class="blog-item"><a href="http://118.31.74.58:4003">To Do</a></div>
+                    <div class="blog-item"><a href="http://118.31.74.58:4001">To Do - local</a></div>
                     <div class="blog-item"><a href="https://mrgong1997.github.io/Q-A/">Q & A</a></div>
                     <div class="blog-item"><a href="https://mrgong1997.github.io/LeetCode/">LeetCode</a></div>
                     <div class="blog-item"><a href="http://mrgong.tech/qqmusic/">QQ音乐</a></div>
