--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 <h1>Hello! Welcome to visit my blog!</h1>
                 <h3>These are currently accessible sites:</h3>
                 <div class="blog-group">
-                    <div class="blog-item"><a href="http://118.31.74.58:4080">Feed App</a></div>
-                    <div class="blog-item"><a href="http://118.31.74.58:4070">WPS - Form</a></div>
-                    <div class="blog-item"><a href="http://118.31.74.58:4003">To Do</a></div>
+                    <div class="blog-item"><a href="http://feed.mrgong.tech">Feed App</a></div>
+                    <div class="blog-item"><a href="http://form.mrgong.tech">WPS - Form</a></div>
+                    <div class="blog-item"><a href="http://todo.mrgong.tech">To Do</a></div>
                     <div class="blog-item"><a href="https://mrgong1997.github.io/Q-A/">Q & A</a></div>
                     <div class="blog-item"><a href="https://mrgong1997.github.io/LeetCode/">LeetCode</a></div>
                     <div class="blog-item"><a href="http://mrgong.tech/qqmusic/">QQ音乐</a></div>
