--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 <div class="blog-group">
                     <div class="blog-item"><a href="http://feed.mrgong.tech">Feed App</a></div>
                     <div class="blog-item"><a href="http://form.mrgong.tech">WPS - Form</a></div>
+                    <div class="blog-item"><a href="http://118.31.74.58:4004">NextNote</a></div>
                     <div class="blog-item"><a href="http://todo.mrgong.tech">To Do</a></div>
                     <div class="blog-item"><a href="https://mrgong1997.github.io/Q-A/">Q & A</a></div>
                     <div class="blog-item"><a href="https://mrgong1997.github.io/LeetCode/">LeetCode</a></div>
-                    <div class="blog-item"><a href="http://mrgong.tech/qqmusic/">QQ音乐</a></div>
-                    <div class="blog-item"><a href="http://mrgong.tech/qqmusic2.0/">QQ音乐2.0</a></div>
                     <div class="blog-item"><a href="http://mrgong.tech/dribbble/">Dribbble</a></div>
+                    <div class="blog-item"><a href="http://mrgong.tech/qqmusic2.0/">QQ音乐</a></div>
                     <div class="blog-item"><a href="http://mrgong.tech">To be developed</a></div>
                 </div>
             </div>
