--- a/resume/index.html
+++ b/resume/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li>
                         <span class="material-icons">电话：</span>
-                        <span class="text">156xxxx5310</span>
+                        <span class="text">15623085310</span>
                     </li>
                     <li>
                         <span class="material-icons">邮箱：</span>
@@ -30,7 +30,7 @@
                     </li>
                     <li>
                         <span class="material-icons">博客：</span>
-                        <a href=""><span class="text ">mrgong1997.github.io</span></a>
+                        <a href=""><span class="text ">http://mrgong.tech</span></a>
                     </li>
                     <li>
                         <span class="material-icons">github：</span>
@@ -65,26 +65,30 @@
                 <ul>
                     <li>1. 熟悉计算机基础，熟悉基本的数据结构和算法</li>
                     <li>2. 熟悉前端基础知识 HTML/CSS，熟悉 flex/grid 等页面布局方式以及移动端适配</li>
-                    <li>3. 熟悉 JavaScript，了解 ES6 新特性、TypeScript、原型链、闭包等</li>
-                    <li>4. 熟悉 React 及周边 React-router/Redux/Ant Design 等，了解 React Hooks，具有一定项目开发经验</li>
-                    <li>5. 了解 HTTP 协议、请求报文、状态码、HTTPs 以及浏览器缓存等等</li>
-                    <li>6. 了解 Node.js 和 MongoDB 数据库的基本使用，能用 Koa 应用框架进行后端接口开发</li>
-                    <li>7. 了解Git工作流，能与团队进行协作开发</li>
+                    <li>3. 熟悉 JavaScript，了解 ES6 新特性、TypeScript、异步编程、原型链等</li>
+                    <li>4. 熟悉 React 及周边 React-router/Ant Design/Axios 等，熟练使用常见的 Hooks</li>
+                    <li>5. 了解 Node.js 和 MongoDB 数据库的基本使用，能用 Koa 应用框架进行后端接口开发</li>
+                    <li>6. 了解 浏览器工作原理、Cookie、LocalStorage 等，了解 HTTP 请求、常见状态码等</li>
+                    <li>7. 了解 SSR 服务端渲染，能通过 Next.js 框架搭建适合服务端渲染的应用</li>
+                    <li>8. 了解 Git 工作流以及开发流程规范，了解一定的编码规范，能与团队进行协作开发</li>
                 </ul>
             </div>
             <div class="about exp">
                 <h2 class="title2">实习经历</h2>
                 <div class="box ">
-                    <div class="year-company ">
-                        <h5>金山办公软件有限公司</h5>
-                        <h5>2021.07-2021.09</h5>
-                    </div>
-                    <div class="text ">
-                        <h4>前端实习生</h4>
+                    <div class="text">
+                        <div class="comp">
+                            <h4>武汉金山办公软件有限公司</h4>
+                            <h5>前端开发实习生</h5>
+                            <h5 class="time">2022.06-2022.08</h5>
+                        </div>
+                    <h5>主要工作：</h5>
                         <ul>
-                            <li>和项目负责人沟通需求，确定负责项目模块的核心功能；</li>
-                            <li>根据需求文档设计部分数据库、接口，并参与分析设计前端页面结构；</li>
-                            <li>负责部分模块的服务端和前端代码开发，编写接口测试用例并修复 bug.</li>
+                            <li>1. 作为项目负责人，制定开发流程规范，组织小组讨论数据结构和任务的分工，把控项目进度和质量；</li>
+                            <li>2. 前后端项目的初始化配置，包括项目初始化、数据库、端口、路由配置等；</li>
+                            <li>3. 服务端：编写接口文档，实现负责模块的接口，同时编写接口测试用例以及修复 bug；</li>
+                            <li>4. 前端：分析页面结构，拆分公共组件，封装可复用逻辑，编写负责模块的代码，并进行测试和优化；</li>
+                            <li>5. 对成员负责模块进行整合验收，同时对代码进行Code Review，并编写项目说明文档，将项目顺利交付.</li>
                         </ul>
                     </div>
                 </div>
@@ -93,31 +97,31 @@
                 <h2 class="title2">项目经历</h2>
                 <div class="box">
                     <div class="text ">
-                        <h4>后台管理系统</h4>
+                        <h4>FeedApp - 信息流社交应用</h4>
                         <ul>
                             <li>
-                                <h5>项目介绍：</h5>B 端后台管理应用，用于用户信息管理、部门管理、人员审核、公告发布等功能。</li>
+                                <h5>项目介绍：</h5>一款移动端社交应用，由微信授权登录，支持发帖、评论、转发、搜索、通知、私信等功能。</li>
                             <li>
-                                <h5>技术栈：</h5>MongoDB + Node.js + Koa + React Hooks + TypeScript + Ant Design</li>
+                                <h5>技术栈：</h5>MongoDB + Node.js + Koa + React Hooks + TypeScript + Ant-mobile</li>
                             <li>
-                                <h5>主要工作：</h5>参与数据库以及接口的设计与开发；负责用户管理功能的开发；使用 Hooks 重构部分功能</li>
+                                <h5>主要工作：</h5>项目负责人，搭建项目框架，组织讨论数据结构并实现接口，实现前端的帖子和私信模块等。</li>
                             <li>
-                                <h5>成果：</h5>为不同角色分配权限实现权限管理模块；通过设置 token 实现会话状态管理，如用户登录和注销；抽离并封装多个公共组件进行复用。</li>
+                                <h5>成果：</h5><span><span class="strong">对接微信授权登录服务</span>；<span class="strong">对接阿里云 OSS 服务</span>进行图片上传，并将<span class="strong">缩略图持久化存储</span>；封装 Hook - <span class="strong">usePosts，提高各种帖子列表的逻辑复用</span> ；实现<span class="strong">分页查询、骨架屏、私信的单方面删除、消息轮询</span>等。</span></li>
                         </ul>
                     </div>
                 </div>
                 <div class="box box2">
                     <div class="text ">
-                        <h4>文章创作平台</h4>
+                        <h4>NextNote - 笔记创作平台</h4>
                         <ul>
                             <li>
-                                <h5>项目介绍：</h5>多用户的文章发布应用，用户可注册账户并编辑发表文章，文章采用markdown格式编辑并支持解析展示，支持图片上传。用户可点赞关注，文章列表支持按时间、浏览量、点赞量进行排序。</li>
+                                <h5>项目介绍：</h5>一款简单的笔记应用，支持类似文件系统的目录结构，文档列表支持下拉刷新和触底加载，笔记支持富文本编辑器，支持生成分享链接，分享的文档展示为 html 内容，外部用户无需登录即可访问。</li>
                             <li>
-                                <h5>技术栈：</h5>create-react-app + React Hooks + next.js + markdown</li>
+                                <h5>技术栈：</h5>create-react-app + React Hooks + TypeScript + Next.js</li>
                             <li>
-                                <h5>主要工作：</h5>服务端负责请求文章列表接口的开发；用户端负责文章编辑系统模块的开发</li>
+                                <h5>主要工作：</h5>独立完成项目，服务端自行实现所有接口，前端通过 Next.js 框架实现 SSR 服务端渲染</li>
                             <li>
-                                <h5>成果：</h5>针对内容型网站的特性，通过 SSR 服务端渲染优化首屏加载速度；通过封装自定义 Hook（useLabels）实现文章标签中的逻辑复用。</li>
+                                <h5>成果：</h5><span><span class="strong">实现基于cookie的session会话系统</span>，服务端实现<span class="strong">登录检查的中间件</span>，前端借助<span class="strong">响应拦截器实现登录状态的路由自动跳转</span>；<span class="strong">封装节流、防抖函数</span>，并在多个模块复用；通过实现<span class="strong">脚本过滤器的中间件来预防富文本内容可能引起的 xss 攻击</span>；实现<span class="strong">删除文件夹下所有文件的递归删除</span>，<span class="strong">同名文件的检测</span>等</span></li>
                         </ul>
                     </div>
                 </div>
