--- a/lxy/index.html
+++ b/lxy/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>啧啧啧</title>
 </head>
 <body>
   <center> <h1>不会有人还有早八吧</h1></center>
